--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,18 @@
 <h1>Articles</h1>
 
 <table class="table table-bordered table-striped table-hover">
- 
-  <% @articles.last(@last_inserted).each do |article| %>
+ <tr>
+ 	<th>Author</th>
+ 	 <th>Title</th>
+ 	<th>Date</th>
+ 	<th>Reading Time</th>
+ </tr>
+  <% @articles.each do |article| %>
   <tbody>
   <tr>
   <div>
-	<td><%= link_to article.name, article %></td>
-	<td><%= article.title %></td>
+	<td><%=  article.name %></td>
+	<td><%= link_to article.title,article %></td>
 	<td><%= article.date %></td>
 	<td><%= article.time %></td>
 	</div>
